# memory-service

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: main.py
app/api/: dependencies.py  exceptions.py
app/api/routes/: healthchecks.py  memories.py  recall.py  search.py  turns.py
app/api/schemas/: __init__.py  memory.py  recall.py  search.py  turn.py
app/infra/db/: get_db.py  unit_of_work.py
app/infra/db/models/: __init__.py  memory.py  session.py  turn.py
app/infra/db/repositories/: memory_repo.py  turn_repo.py
app/infra/llm/: client.py
app/services/: embedding_service.py  extraction_service.py  key_normalizer.py  memory_service.py  sanitizer.py  schemas.py  search_service.py
app/services/recall/: __init__.py  assembler.py  expander.py  searcher.py  service.py
config/: __init__.py  app.py  db.py  llm.py  logging.py  security.py
fixtures/: conversations.py
migrations/: env.py
migrations/versions/: b2c3d4e5f6a7_add_is_stable_to_memories.py  cd362cd2e8e7_fix_supersedes_fk_on_delete.py  fe0a0e461642_init.py
tests/: conftest.py  test_contract.py  test_persistence.sh  test_recall_quality.py  test_robustness.py  test_sessions.py
