[project]
name = "memory-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "openai>=2.38.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "structlog>=25.5.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]
